[tool.poetry]
name = "awardsreport"
version = "0.1.0"
description = "Monthly report for USAspending award obligation trends."
authors = ["Ben T"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src/awardsreport"
]